--- a/app/css/main.css
+++ b/app/css/main.css
@@ -85,6 +85,9 @@ body {
   font-size: 0;
   visibility: hidden;
 }
+.container-pages {
+  margin-top: 100px;
+}
 .deckgrid {
   margin: 0 auto;
 }
@@ -127,46 +130,25 @@ body {
 .header {
   text-align: center;
 }
-header {
-  margin-top: 0;
-}
-header .nav-top {
-  height: 135px;
-  background-color: #eee7de;
-  z-index: 9999;
-}
-header .nav-top p,
-header .nav-top p > a {
-  color: #555;
-}
-header .nav-top i {
-  font-size: 22px;
-  padding-left: 10px;
-}
-header .nav-top .logo {
-  margin: 15px 0;
-  text-align: center;
-  position: relative;
-  z-index: 9999;
-}
-header .navbar-default {
-  position: relative;
+.header .navbar-default {
+  position: fixed;
   left: 0;
   right: 0;
   background: #fff;
-  height: 80px;
-  border-top: 3px dashed #372611;
-  border-bottom: 3px dashed #372611;
+  height: 100px;
+  border-top: 3px dashed #fff;
+  border-bottom: 3px dashed #fff;
   border-radius: 0;
   margin-bottom: 0;
   z-index: 9999;
+  box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
-header .navbar-default .navbar-brand {
+.header .navbar-default .navbar-brand {
   padding: 5px 15px;
 }
-header .navbar-default .navbar-nav > li > a {
-  color: #38270f;
-  padding: 30px 15px;
+.header .navbar-default .navbar-nav > li > a {
+  color: #5d5d5d;
+  padding: 37px 15px;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
@@ -174,36 +156,32 @@ header .navbar-default .navbar-nav > li > a {
   -o-transition: all ease-in-out 0.35s;
   transition: all ease-in-out 0.35s;
 }
-header .navbar-default .navbar-nav > li > a:hover,
-header .navbar-default .navbar-nav > li > a:focus {
+.header .navbar-default .navbar-nav > li > a:hover,
+.header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #d14094;
+  color: #e11518;
 }
-header .navbar-default .nav-main {
+.header .navbar-default .container-fluid {
   display: table;
   margin: 0 auto;
 }
-header .navbar-default .container-fluid {
-  display: table;
-  margin: 0 auto;
-}
-header .navbar-default .nav-log {
+.header .navbar-default .nav-log {
   margin-top: 30px;
   border-left: 1px solid #fff;
   text-indent: 20px;
 }
-header .navbar-default .nav-log li > a {
+.header .navbar-default .nav-log li > a {
   padding: 15px 15px;
   border: none;
 }
-header .navbar-default .nav-log li > a:hover {
+.header .navbar-default .nav-log li > a:hover {
   border: none;
 }
-header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
+.header .navbar-default .navbar-nav .dropdown:hover .dropdown-toggle {
   background-color: transparent;
   color: #f2dec7;
 }
-header .navbar-default .navbar-nav .dropdown .dropdown-menu {
+.header .navbar-default .navbar-nav .dropdown .dropdown-menu {
   width: 100%;
   background-color: #fff;
   border: none;
@@ -212,19 +190,19 @@ header .navbar-default .navbar-nav .dropdown .dropdown-menu {
   -moz-box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
   box-shadow: 0px 5px 5px rgba(0,0,0,0.33);
 }
-header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
+.header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a {
   color: #5d5d5d;
   font-weight: 300;
   font-size: 16px;
   padding: 10px 15px;
 }
-header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
+.header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a:hover {
   background: rgba(56,156,128,0.4);
   color: #fff;
 }
-header .logo {
-  width: auto;
-  margin-top: 0;
+.header .logo {
+  height: 95px;
+  margin-top: -3px;
 }
 .navbar-header {
   color: #d2b770 !important;
@@ -241,30 +219,66 @@ header .logo {
   color: #aaa;
 }
 #us {
-  padding: 100px 0;
+  padding: 60px 0;
 }
-#us p {
+#us .who-us h1 {
+  color: #555;
+}
+#us .who-us p {
   color: #5d5d5d;
   font-size: 18px;
   text-align: justify;
   padding: 15px 0;
 }
-#shoes-top {
-  padding: 30px 0;
-  background-color: #eee7de;
-  border-top: 3px dashed #372611;
+.box-gas {
+  padding: 0 30px 20px;
+  border-left: 1px solid #eee;
+  margin-bottom: 5px;
 }
-#shoes-top .title-section {
-  color: #38270f;
-  padding: 15px 0;
-  margin: 0 0 25px;
+.box-gas .box-gas-header {
+  border-bottom: 1px solid #eee;
 }
-#shoes-top:hover,
-#shoes-top:focus {
-  cursor: pointer;
+.box-gas .box-gas-header .logo-p {
+  width: 300px;
+  padding-bottom: 20px;
+}
+.box-gas .box-body {
+  padding-top: 20px;
+}
+.box-gas .box-body .gas-premium {
+  color: #f00;
+}
+.box-gas .box-body .gas-magna {
+  color: #145c32;
 }
 .btn-white {
   background: #fff;
+}
+#maps {
+  background-image: url("../img/map.jpg");
+  height: 350px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+#maps h3 {
+  font-size: 28px;
+  padding-top: 100px;
+  color: #fff;
+}
+#contact-sec {
+  padding: 20px 0;
+  background: #292a29;
+}
+#contact-sec .section-cont {
+  text-align: center;
+}
+#contact-sec .section-cont a {
+  color: #fff;
+}
+#contact-sec .section-cont a > i {
+  font-size: 60px;
 }
 #search_submit {
   margin-top: 20px;
@@ -294,7 +308,6 @@ header .logo {
 }
 .carousel-inner {
   background-color: rgba(238,231,222,0.07);
-  border-bottom: 3px dashed #372611;
 }
 .carousel-caption {
   top: 25%;
@@ -780,14 +793,34 @@ color
   margin: 0;
 }
 .box-default {
-  background-color: #cb6133;
-  margin: 10px;
-  border: 5px solid #fff;
-  -webkit-transition: all ease 0.1s;
-  -moz-transition: all ease 0.1s;
-  -ms-transition: all ease 0.1s;
-  -o-transition: all ease 0.1s;
-  transition: all ease 0.1s;
+  background-color: #008000;
+  -webkit-transition: all ease 0.05s;
+  -moz-transition: all ease 0.05s;
+  -ms-transition: all ease 0.05s;
+  -o-transition: all ease 0.05s;
+  transition: all ease 0.05s;
+  text-align: center;
+  color: #fff;
+  padding: 20px;
+}
+.box-default a {
+  -webkit-transition: all ease 0.05s;
+  -moz-transition: all ease 0.05s;
+  -ms-transition: all ease 0.05s;
+  -o-transition: all ease 0.05s;
+  transition: all ease 0.05s;
+  text-align: center;
+  color: #fff;
+}
+.box-default a>img,
+.box-default h3 {
+  -webkit-transition: all 1.9s ease;
+  -moz-transition: all 1.9s ease;
+  -o-transition: all 1.9s ease;
+  -ms-transition: all 1.9s ease;
+}
+.box-default a {
+  color: #fff;
 }
 .box-default .img-box {
   background-size: cover;
@@ -796,91 +829,23 @@ color
   background-position: center center;
   opacity: 1;
 }
-.box-default .description h4 {
-  color: #767676;
-}
-.box-default a {
-  color: #555;
-}
-.box-default .box-footer {
-  text-align: center;
-  border-top: 1px solid #f4f4f4;
-  border-bottom: 1px solid #f4f4f4;
-  color: #c7c7c7;
-  padding: 5px 0;
-}
-.box-default h3 {
-  background-color: transparent;
-  padding: 10px;
-  color: #fff;
-  font-size: 22px;
-  -webkit-transition: all ease 0.1s;
-  -moz-transition: all ease 0.1s;
-  -ms-transition: all ease 0.1s;
-  -o-transition: all ease 0.1s;
-  transition: all ease 0.1s;
-}
-.box-default .comment-area {
-  padding-bottom: 10px;
-}
-.box-default .comment-area .comment,
-.box-default .comment-area .date {
-  color: #5d5d5d;
-}
-.box-default .box-header {
-  height: 200px;
-  background-size: cover;
-  background-position: center center;
-}
-.box-default .box-container {
-  background-color: #cb6133;
-  text-align: left;
-  height: 60px;
-}
-.box-default .box-container a {
-  text-decoration: none;
-  color: #fff;
-}
-.box-default .box-container h3 {
-  color: #fff;
-  font-weight: 300;
-  font-size: 18px;
-  margin: 0;
-}
-.box-default .box-container p {
-  color: #5d5d5d;
-  text-align: justify;
-}
-.box-default .box-container .height-summary {
-  padding: 0 10px;
-}
 .box-default:hover,
 .box-default:focus {
-  background: transparent;
-  border: 5px solid #cb6133;
+  background: #ac0000;
+}
+.box-default:hover a>img,
+.box-default:focus a>img,
+.box-default:hover h3,
+.box-default:focus h3 {
+  -webkit-transform: scale(1.08);
+  -moz-transform: scale(1.08);
+  -ms-transform: scale(1.08);
+  -o-transform: scale(1.08);
+  transform: scale(1.08);
 }
 .box-default:hover .img-box,
 .box-default:focus .img-box {
   opacity: 1;
-}
-.box-default:hover h1,
-.box-default:focus h1,
-.box-default:hover h2,
-.box-default:focus h2,
-.box-default:hover h3,
-.box-default:focus h3 {
-  color: #fff;
-  background-color: #cb6133;
-}
-.box-default:hover p,
-.box-default:focus p {
-  color: #555;
-}
-.box-default:hover .comment-area .date,
-.box-default:focus .comment-area .date,
-.box-default:hover .comment-area .comment,
-.box-default:focus .comment-area .comment {
-  color: #555;
 }
 .widgets {
   margin-top: 0px;
@@ -1016,9 +981,9 @@ color
   padding-bottom: 25px;
 }
 #footer_area {
-  background: #352810;
+  background: transparent;
   padding: 30px 0;
-  color: rgba(255,255,255,0.6);
+  color: #777;
   line-height: 30px;
   border-top: 1px solid #ccc;
 }
@@ -1062,6 +1027,10 @@ color
 }
 #footer_area .text {
   color: #e08f17;
+}
+.btn-big {
+  padding: 25px 30px;
+  font-size: 20px;
 }
 .btn-login {
   color: #fff;
@@ -1381,7 +1350,8 @@ color
   display: none;
 }
 #products {
-  padding: 60px 0;
+  padding: 0;
+  text-aling: center;
 }
 #products h2 {
   color: #38270f;
