--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,10 +1,12 @@
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">{{ Page.detail.title }}</h2>
+    </div>
+</div>
 <section id="content-area">
     <div class="container">
         <div class="row">
             <div class="col-md-9">
-                <div class="col-md-12 title-post">
-                    <h2 class="title">{{ Page.detail.title }}</h2>
-                </div>
 
                 <img ng-src="{{ Page.detail.urlImages.medium }}" alt="{{ Page.detail.title }}"/>
 
