--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -253,7 +253,7 @@ body
   height 110px
 .slider-img
   background-position center center
-  background-size cover
+  background-size 100%
   height 520px
   background-repeat no-repeat
 .bg-inner
@@ -324,9 +324,17 @@ body
     color #555
 
 /************** content area default ****************/
-
+.header-title-page
+  .img-title
+    background-position top center
+    background-size 100%
+    background-repeat no-repeat
+    height 130px
+    .title
+      color white
+      padding 50px 60px 0
 #content-area
-  margin 60px 0 60px
+  margin 30px 0 60px
   .title-post
     text-align left
     color #3a2103
@@ -428,7 +436,7 @@ body
     background rgba(224, 143, 23, 0.6)
     text-shadow 0 0 10px #000
 #content-contact
-  background-image url('../img/bg-contact.png')
+  background-image none
   background-size cover
   background-position center
   background-repeat no-repeat
@@ -583,11 +591,11 @@ body
   padding 25px
 .box-widget
   padding 5px 0
-  border 3px dashed #fff
-  background-color #eee7de
+  background-color white
+  border-left 1px solid #ddd
   .box-widget-header
     padding 10px
-    border-bottom 1px solid #ccc
+    border-bottom 1px solid #ddd
     font-size 22px
     background-color transparent
     color #3a2103
@@ -595,7 +603,7 @@ body
     padding 20px
     h3>a, h2>a
       font-size 14px
-      color #6a5c5d
+      color #777
       font-weight 300
       &:hover
         color #bf9e4f
@@ -621,17 +629,34 @@ body
   margin 20px
   padding 0
   transition all 0.5s ease
-  position relative
   color #555
+  border-bottom 1px solid #eee
+  img
+    width 100%
+    height 200px
+    background-repeat no-repeat
+    background-position center center
+    opacity 1
+  h4
+    padding 10px 0
+    font-size 16px
+    height 40px
+  .simple-header
+    .img-box
+      background-size cover
+      height 250px
+      background-repeat no-repeat
+      background-position center center
+      opacity 1
   .title-box
     height 50px
     padding 15px
-  .box-footer
-    position absolute
+  .simple-container
     bottom 10px
-    padding 0 15px
     font-size 18px
-    a
+    text-center
+    h3
+      padding 5px 0
       color #555
       font-weight bold
       &:hover
@@ -736,7 +761,7 @@ body
         border-top-right-radius 0px
 
 #parallax
-  background-image url('../img/parallax.jpg')
+  background-image none
   background-repeat no-repeat
   background-position center center
   background-size cover
@@ -1082,11 +1107,8 @@ body
   .title, .text-form
     color #3a2103
 .contact-section
-  background rgba(255,255,255,0.95)
-  padding 25px
-  box-shadow 0 0 20px rgba(0, 0, 0, 0.10)
-  border-radius 5px
-  margin-top 100px
+  background transparent
+  margin-top 10px
 .form-item
   padding-top 20px
 .form-control
@@ -1216,11 +1238,10 @@ body
   width 100%
   height 100%
   opacity 1
-  background-image url('../img/bg.jpg')
-  background-size cover
-  background-repeat no-repeat
-  /*background -webkit-linear-gradient(to left, #DE6262 , #FFB88C)
-  background linear-gradient(to left, #DE6262 , #FFB88C)*/
+  background #1D976C /* fallback for old browsers */
+  background -webkit-linear-gradient(to left, #1D976C , #93F9B9) /* Chrome 10-25, Safari 5.1-6 */
+  background linear-gradient(to left, #1D976C , #93F9B9) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 
 .block-ui-message
