--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -1,22 +1,22 @@
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">{{ Post.categoryName }}</h2>
+    </div>
+</div>
 <section id="content-area">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 title-post">
-                <h2 class="title">{{ Post.categoryName }}</h2>
-            </div>
-        </div>
         <div class="row">
             <div class="col-md-12 content-pages" infinite-scroll='Post.getMorePosts()'
                  infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                 <div class="container">
                     <div class="col-md-3" ng-repeat="entry in Post.list">
-                        <div class="box-default">
+                        <div class="box-white">
                             <a ui-sref="post_detail({slug: entry.slug})">
-                                <div class="box-header">
+                                <div class="simple-header">
                                     <div class="img-box" style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : initConfig.img_default }}"></div>
                                 </div>
 
-                                <div class="box-container">
+                                <div class="simple-container">
                                     <h3>{{ entry.title }}</h3>
                                 </div>
                             </a>
