--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,10 +1,15 @@
-<section id="content-contact">
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">Contáctanos</h2>
+    </div>
+</div>
+<section id="content-area">
     <div class="">
         <div class="form-section">
             <div class="container">
-                <div class="col-md-8 col-md-offset-2 contact-section">
+                <div class="contact-section">
                     <div class="col-md-12 title-post">
-                        <h2 class="title">Contacto</h2>
+                        <h2 class="title">Tu opinión es importante</h2>
                         <hr/>
                     </div>
                     <br/><br/>
@@ -12,12 +17,12 @@
                     <div class="social-media">
                         <div class="col-md-6">
                             <div class="social">
-                                <h3><a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a></h3>
+                                <h3><a href="tel:3535320911"><i class="fa fa-phone"></i>(353) 532 0911</a></h3>
+                                <h3><a href="tel:3535326816"><i class="fa fa-phone"></i>(353) 532 6816</a></h3>
                                 <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
             {{ initConfig.email }}</a></h3>
-                                <h3><a target="_blank" href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464"><i
-                        class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a></h3>
-                                <h3><a href="https://www.facebook.com/joseluisgtzf" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
+
+                                <h3><a href="#" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
                             </div>
                         </div>
                     </div>
@@ -56,7 +61,7 @@
                                           ng-model="Contact.notification.message"></textarea>
 
                                 <div style="text-align: right;padding-top:15px;">
-                                    <button type="submit" class="btn-orange" ng-disabled="Contact.busy">
+                                    <button type="submit" class="btn-red" ng-disabled="Contact.busy">
                                         Enviar <span ng-if="Contact.busy"><i class="fa fa-spinner fa-spin"></i></span>
                                     </button>
 
