--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -18,6 +18,7 @@
 
                                 <div class="simple-container">
                                     <h3>{{ entry.title }}</h3>
+                                    <p>{{ entry.excerpt| characters:50 }}</p>
                                 </div>
                             </a>
                         </div>
