--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -1,3 +1,8 @@
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">{{ Post.detail.title }}</h2>
+    </div>
+</div>
 <div id="breadcrumb">
     <div class="container">
         <ol class="breadcrumb">
@@ -13,9 +18,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-9 col-sm-8">
-                <div class="col-md-12 title-post" style="text-align:left;">
-                    <h2 class="title">{{ Post.detail.title }}</h2>
-                </div>
                 <div class="content-post">
                     <div ng-if="!Post.isService">
                         <img ng-if="Post.detail.urlImages.medium" ng-src="{{ Post.detail.urlImages.medium }}"
