--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -69,7 +69,7 @@ body
 .content
   margin-top 0
 .content-post
-  margin 80px 0
+  margin 20px 0
   article
     h3
       color #bf9e4f
@@ -631,12 +631,6 @@ body
   transition all 0.5s ease
   color #555
   border-bottom 1px solid #eee
-  img
-    width 100%
-    height 200px
-    background-repeat no-repeat
-    background-position center center
-    opacity 1
   h4
     padding 10px 0
     font-size 16px
@@ -652,13 +646,19 @@ body
     height 50px
     padding 15px
   .simple-container
-    bottom 10px
+    padding 5px 0
     font-size 18px
-    text-center
+    text-align center
+    height 80px
+    text-transform uppercase
+    p
+      color red
     h3
+      font-size 16px
       padding 5px 0
       color #555
       font-weight bold
+      margin 0
       &:hover
         color #7e0000
   .icon-box-bg
@@ -826,7 +826,7 @@ body
       font-weight bold
       color #999
 #breadcrumb
-  background-color #eee7de
+  background-color #f5f5f5
   border-bottom 1px solid #f5f5f5
   .breadcrumb
     padding 15px 15px
@@ -837,10 +837,10 @@ body
     border-bottom 1px solid transparent
     margin-bottom 0
     .breadcrumb > .active
-      color rgba(111, 79, 60, 0.52)
+      color #ccc
       font-weight bold
     li>a
-      color rgba(111, 79, 60, 0.52)
+      color #999
 .img-size
   a>img
     width 100%
