--- a/app/css/main.css
+++ b/app/css/main.css
@@ -69,7 +69,7 @@ body {
   margin-top: 0;
 }
 .content-post {
-  margin: 80px 0;
+  margin: 20px 0;
 }
 .content-post article h3 {
   color: #bf9e4f;
@@ -743,13 +743,6 @@ color
   color: #555;
   border-bottom: 1px solid #eee;
 }
-.box-white img {
-  width: 100%;
-  height: 200px;
-  background-repeat: no-repeat;
-  background-position: center center;
-  opacity: 1;
-}
 .box-white h4 {
   padding: 10px 0;
   font-size: 16px;
@@ -767,16 +760,22 @@ color
   padding: 15px;
 }
 .box-white .simple-container {
-  bottom: 10px;
+  padding: 5px 0;
   font-size: 18px;
+  text-align: center;
+  height: 80px;
+  text-transform: uppercase;
 }
-.box-white .simple-container text-center,
+.box-white .simple-container p {
+  color: #f00;
+}
 .box-white .simple-container h3 {
+  font-size: 16px;
   padding: 5px 0;
   color: #555;
   font-weight: bold;
+  margin: 0;
 }
-.box-white .simple-container text-center:hover,
 .box-white .simple-container h3:hover {
   color: #7e0000;
 }
@@ -979,7 +978,7 @@ color
   color: #999;
 }
 #breadcrumb {
-  background-color: #eee7de;
+  background-color: #f5f5f5;
   border-bottom: 1px solid #f5f5f5;
 }
 #breadcrumb .breadcrumb {
@@ -992,11 +991,11 @@ color
   margin-bottom: 0;
 }
 #breadcrumb .breadcrumb .breadcrumb > .active {
-  color: rgba(111,79,60,0.52);
+  color: #ccc;
   font-weight: bold;
 }
 #breadcrumb .breadcrumb li>a {
-  color: rgba(111,79,60,0.52);
+  color: #999;
 }
 .img-size a>img {
   width: 100%;
