--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -9,14 +9,14 @@
             <div class="col-md-12 content-pages" infinite-scroll='Product.getMoreProducts()'
                  infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
                 <div class="container">
-                    <div class="col-sm-3 text-center" ng-repeat="category in Product.list">
-                        <div class="box-default">
-                            <div class="box-header">
+                    <div class="col-sm-12 text-center" ng-repeat="category in Product.list">
+                        <div class="box-white">
+                            <div class="simple-hader">
                                 <a ui-sref="category({slug: category.slug})">
                                     <div class="img-box" style="background-image: url('{{ category.urlImages.original }}')"></div>
                                 </a>
                             </div>
-                            <div class="box-container">
+                            <div class="simple-container">
                                 <h3>{{ category.name }}</h3>
                             </div>
                         </div>
