ajuste de estlo

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -254,7 +254,7 @@ body
 .slider-img
   background-position center center
   background-size 100%
-  height 520px
+  height 420px
   background-repeat no-repeat
 .bg-inner
   width 100%
@@ -327,7 +327,7 @@ body
 .header-title-page
   .img-title
     background-position top center
-    background-size 100%
+    background-size cover
     background-repeat no-repeat
     height 130px
     .title
@@ -624,6 +624,25 @@ body
     box-shadow 0 0 0 transparent !important
     h3
       color #cb6c18
+.box-blog
+  padding-bottom 30px !important
+  .btn-red
+    color white !important
+  .blog-container
+    text-align left
+    height auto
+    text-transform normal
+    p
+      color #777
+    h3
+      font-size 16px
+      padding 5px 0
+      color #555
+      font-weight bold
+      margin 0
+      &:hover
+        color #7e0000
+
 .box-white
   background-color white
   margin 20px
@@ -669,7 +688,7 @@ body
 .data-contact
   padding 10px 0
   a
-    color #352810
+    color #555
   a > i
     font-size 14px
 .box-simple
@@ -1079,11 +1098,11 @@ body
     color #0177B5
 
 .social-media
-  color #3a2103
-  padding 30px 0
+  color #555
+  padding 10px 0
   .social
     a
-      color #3a2103
+      color #555
       font-size 18px
       line-height 40px
 
