--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -90,8 +90,6 @@
       font-size 24px
     h4
       font-size 18px
-  .slider-img
-    height 450px
   header .navbar-default .nav-log li > a
     padding 15px 0
     border none
@@ -101,9 +99,8 @@
 
   header .logo
     width 180px
-    position absolute !important
-    left 35%
-    top 35px
+    padding 25px 14px 0 25px
+    margin-top 10px !important
 
   .box-widget
     border-left 0 solid transparent
@@ -117,63 +114,72 @@
     height 200px
   .work-description
     margin-top 50px
+  .box-default h3
+    font-size 16px
+    height 40px
+  .slider-img
+    background-size cover
+    background-position left
+  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
+    color #555
+  .navbar-default .navbar-toggle .icon-bar
+    background-color #555
+    width 40px
+    height 5px
 
-  /*header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a*/
-    /*color white*/
-  /*.navbar-default .navbar-toggle .icon-bar*/
-    /*background-color white*/
-    /*width 40px*/
-    /*height 5px*/
+  .navbar-logo
+    display none
+    .logo-img
+      display none
 
-  /*.navbar-logo*/
-    /*display none*/
-    /*.logo-img*/
-      /*display none*/
+  .navbar-header
+    float none
 
-  /*.navbar-header*/
-    /*float none*/
+  .navbar-toggle
+    display block
+    margin-top 7%
 
-  /*.navbar-toggle*/
-    /*display block*/
-    /*margin-top 7%*/
+  .navbar-collapse
+    border-top 1px solid transparent
+    box-shadow inset 0 1px 0 rgba(255,255,255,0.1)
 
-  /*.navbar-collapse*/
-    /*border-top 1px solid transparent*/
-    /*box-shadow inset 0 1px 0 rgba(255,255,255,0.1)*/
+  .navbar-collapse.collapse
+    display none !important
 
-  /*.navbar-collapse.collapse*/
-    /*display none !important*/
+  .navbar-collapse.collapse.in
+    display block !important
+    border-top 0px solid white
+    border-color transparent
 
-  /*.navbar-collapse.collapse.in*/
-    /*display block !important*/
-    /*border-top 0px solid white*/
-    /*border-color transparent*/
+  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
+    background transparent
 
-  /*.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus*/
-    /*background transparent*/
+  .navbar-default .navbar-toggle
+    border-color transparent
 
-  /*.navbar-default .navbar-toggle*/
-    /*border-color transparent*/
+  .navbar-nav
+    float none!important
+    margin 7.5px -15px
 
-  /*.navbar-nav*/
-    /*float none!important*/
-    /*margin 7.5px -15px*/
+  .navbar-nav>li
+    float none
 
-  /*.navbar-nav>li*/
-    /*float none*/
+  .navbar-nav>li>a
+    padding-top 10px
+    padding-bottom 10px
 
-  /*.navbar-nav>li>a*/
-    /*padding-top 10px*/
-    /*padding-bottom 10px*/
+  .navbar-toggle .icon-bar
+    background #555
 
-  /*.navbar-toggle .icon-bar*/
-    /*background white*/
+  .navbar-collapse
+    .mobile
+      display none
 
-  /*.navbar-nav*/
-    /*background rgba(0,0,0,0.8)*/
-    /*margin-top 30px*/
-    /*box-shadow 0 4px 5px rgba(0,0,0,0.3)*/
-    /*border-top 0px solid #f5f5f5*/
+  .navbar-nav
+    background rgba(255,255,255,0.9)
+    margin-top 30px
+    box-shadow 0 4px 5px rgba(0,0,0,0.3)
+    border-top 0px solid #f5f5f5
 
   .carousel-inner > .item > img
     height 620px
@@ -202,6 +208,9 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
+  .navbar-collapse
+    .mobile
+      display none
   #products
     text-align center
   .nav-tabs > li
@@ -245,7 +254,11 @@
   .download-app a > img
     width 40%
   .slider-img
-    height 500px
+    height 380px
+    background-size cover
+    background-position left
+  .box-gas
+    border-left none
   header
     width 100%
     z-index 9999
@@ -260,6 +273,9 @@
     display none
   .box-widget
     padding 0
+    border-left none
+    border-top 1px solid #ddd
+
   .carousel-caption h3
     font-size 36px
   .carousel-caption p
@@ -304,7 +320,7 @@
   .form-section
     background transparent
     padding 0
-    margin 160px 0px 25px
+    margin 30px 0 25px
   .carousel-caption
     top 30%
   .navbar-default .navbar-toggle
@@ -325,11 +341,13 @@
       clear both
   .content-post
     margin 20px 0 80px  0
+  .header .navbar-default .navbar-nav > li > a
+    padding 15px 25px
   .navbar-form
     padding 0 15px !important
   .navbar-default .navbar-collapse, .navbar-default .navbar-form
     border none
-    background #3a2103
+    background rgba(255, 255, 255, 0.9)
   .navbar-nav
     background transparent
     margin-top 25px
