--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,34 +1,32 @@
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">Noticias</h2>
+    </div>
+</div>
 <section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
             <div class="col-md-9 col-sm-9">
-                <div class="col-md-12 title">
-                    <h2 class="title-single">Noticias</h2>
-                    <hr class="divider"/>
-                </div>
-
                 <div class="content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                     <div class="row">
-                        <div class="col-sm-4" ng-repeat="entry in Post.list">
-
+                        <div class="box-white col-sm-12 box-blog" ng-repeat="entry in Post.list">
                             <a post-link="{ link: {url: entry.link, target: '_blank'} }"
                                ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
-                                <div class="box-default">
-                                    <div class="box-header-blog" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : initConfig.img_default }}')">
-                                    </div>
 
-                                    <div class="box-container">
-                                        <div class="height-title"><h3>{{ entry.title }}</h3></div>
-                                        <div class="height-summary"><p>{{ entry.excerpt| characters:50 }}</p></div>
-                                    </div>
+                                <div class="simple-header col-md-4 col-sm-4">
+                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : initConfig.img_default }}')"></div>
+                                </div>
+                                <div class="blog-container col-md-8 col-sm-8">
+                                    <div class="height-title"><h3>{{ entry.title }}</h3></div>
+                                    <div class="height-summary"><p>{{ entry.excerpt| characters:100 }}</p></div>
                                     <div class="box-footer">
                                         <p><span><i class="fa fa-calendar-"></i></span>
                                             {{ entry.createdAt | date : shortDate }} </p>
                                     </div>
+                                    <button class="btn btn-red">Ver más <i class="fa fa-angle-right"></i></button>
                                 </div>
                             </a>
-
                         </div>
                         <div class="col-sm-12" ng-show="Post.busy">
                             <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
