--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -8,66 +8,64 @@
         <div class="form-section">
             <div class="container">
                 <div class="contact-section">
-                    <div class="col-md-12 title-post">
-                        <h2 class="title">Tu opinión es importante</h2>
-                        <hr/>
-                    </div>
-                    <br/><br/>
-
                     <div class="social-media">
                         <div class="col-md-6">
+                            <div class="col-md-12 title-post">
+                                <h3 class="title">Tu opinión es importante</h3>
+                                <hr/>
+                            </div>
                             <div class="social">
                                 <h3><a href="tel:3535320911"><i class="fa fa-phone"></i>(353) 532 0911</a></h3>
+
                                 <h3><a href="tel:3535326816"><i class="fa fa-phone"></i>(353) 532 6816</a></h3>
+
                                 <h3><a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i>
-            {{ initConfig.email }}</a></h3>
+                                    {{ initConfig.email }}</a></h3>
 
                                 <h3><a href="#" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a></h3>
                             </div>
                         </div>
-                    </div>
-                    <br/>
-                    <br/>
-
-                    <div class="col-md-12 title-post" style="padding-top: 20px;">
-                        <h3 class="title">Envíanos un mensaje</h3>
-                        <hr/>
-                    </div>
-                    <div class="col-md-12">
-                        <form class="padding form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
-                              ng-init="Contact.notification.subject = 'Formulario de contacto'">
-                            <div class="col-md-6">
-
-                                <label for="name">Nombre *</label>
-
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
-                                       required ng-model="Contact.notification.name">
-
-                                <label for="email">Email *</label>
-
-                                <input type="email" class="form-control" id="email" name="email"
-                                       placeholder="Email" required
-                                       ng-model="Contact.notification.email">
-
-
-                                <label for="phone">Teléfono *</label>
-                                <input type="text" class="form-control" id="phone" name="phone"
-                                       placeholder="Teléfono" required ng-model="Contact.notification.phone">
+                        <div class="col-md-6">
+                            <div class="col-md-12 title-post">
+                                <h3 class="title">Envíanos un mensaje</h3>
+                                <hr/>
                             </div>
-                            <div class="col-md-6">
-                                <label for="email">Escribe tu mensaje *</label>
+                            <form class="padding form-horizontal" ng-submit="Contact.createNotification('CONTACT_FORM')"
+                                  ng-init="Contact.notification.subject = 'Formulario de contacto'">
+                                <div class="col-md-6">
+
+                                    <label for="name">Nombre *</label>
+
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                                           required ng-model="Contact.notification.name">
+
+                                    <label for="email">Email *</label>
+
+                                    <input type="email" class="form-control" id="email" name="email"
+                                           placeholder="Email" required
+                                           ng-model="Contact.notification.email">
+
+
+                                    <label for="phone">Teléfono *</label>
+                                    <input type="text" class="form-control" id="phone" name="phone"
+                                           placeholder="Teléfono" required ng-model="Contact.notification.phone">
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="email">Escribe tu mensaje *</label>
                                 <textarea class="form-control" id="message" name="message" rows="7"
                                           placeholder="Escribe tu mensaje *" required
                                           ng-model="Contact.notification.message"></textarea>
 
-                                <div style="text-align: right;padding-top:15px;">
-                                    <button type="submit" class="btn-red" ng-disabled="Contact.busy">
-                                        Enviar <span ng-if="Contact.busy"><i class="fa fa-spinner fa-spin"></i></span>
-                                    </button>
+                                    <div style="text-align: right;padding-top:15px;">
+                                        <button type="submit" class="btn-red" ng-disabled="Contact.busy">
+                                            Enviar <span ng-if="Contact.busy"><i
+                                                class="fa fa-spinner fa-spin"></i></span>
+                                        </button>
 
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
