--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -3,35 +3,40 @@
         <h2 class="title">{{ Post.categoryName }}</h2>
     </div>
 </div>
-<section id="content-area">
+<section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 content-pages" infinite-scroll='Post.getMorePosts()'
-                 infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
-                <div class="container">
-                    <div class="col-md-3" ng-repeat="entry in Post.list">
-                        <div class="box-white">
-                            <a ui-sref="post_detail({slug: entry.slug})">
-                                <div class="simple-header">
-                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : initConfig.img_default }}"></div>
-                                </div>
+            <div class="col-md-9 col-sm-9">
+                <div class="content-pages" infinite-scroll='Post.getMorePosts()'
+                     infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
+                    <div class="row">
+                        <div class="box-white col-sm-12 box-blog" ng-repeat="entry in Post.list">
+                            <a post-link="{ link: {url: entry.link, target: '_blank'} }"
+                               ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">
 
-                                <div class="simple-container">
-                                    <h3>{{ entry.title }}</h3>
-                                    <p>{{ entry.excerpt| characters:50 }}</p>
+                                <div class="simple-header col-md-4 col-sm-4">
+                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.thumbnails ? entry.urlImages.thumbnails : initConfig.img_default }}')"></div>
+                                </div>
+                                <div class="blog-container col-md-8 col-sm-8">
+                                    <div class="height-title"><h3>{{ entry.title }}</h3></div>
+                                    <div class="height-summary"><p>{{ entry.excerpt| characters:250 }}</p></div>
+                                    <button class="btn btn-red">Leer más <i class="fa fa-angle-right"></i></button>
                                 </div>
                             </a>
                         </div>
+                        <div class="col-sm-12" ng-show="Post.busy">
+                            <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
+                        </div>
+                        <div class="col-sm-12" ng-show="!Post.busy">
+                            <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
+                                contenido disponible</h2>
+                        </div>
                     </div>
-                    <div class="col-sm-12" ng-show="Post.busy">
-                        <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
-                    </div>
-
-                    <div class="col-sm-12" ng-show="!Post.busy">
-                        <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
-                            contenido disponible</h2>
-                    </div>
+                    <!--post list -->
                 </div>
+            </div>
+            <div class="col-md-3 col-sm-3 widgets">
+                <ng-include src="'/templates/partials/sidebar.html'"></ng-include>
             </div>
         </div>
     </div>
