--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,33 +1,34 @@
+
+<div class="header-title-page">
+    <div class="img-title" style="background-image: url('../img/bg-header.jpg')">
+        <h2 class="title">{{ Product.categoryName }}</h2>
+    </div>
+</div>
 <section id="content-area">
     <div class="container">
-        <div class="row">
-            <div class="col-md-12 title-post">
-                <h2 class="title">{{ Product.categoryName|translate }}</h2>
-            </div>
-        </div>
         <div class="row">
             <div class="col-md-12 content-pages" infinite-scroll='Product.getMoreProducts()'
                  infinite-scroll-disabled='Product.busy || !Product.next || Product.loadProducts'>
                 <div class="container">
-                    <div class="col-sm-12 text-center" ng-repeat="category in Product.list">
+                    <div class="col-md-3" ng-repeat="entry in Product.list">
                         <div class="box-white">
-                            <div class="simple-hader">
-                                <a ui-sref="category({slug: category.slug})">
-                                    <div class="img-box" style="background-image: url('{{ category.urlImages.original }}')"></div>
-                                </a>
-                            </div>
-                            <div class="simple-container">
-                                <h3>{{ category.name }}</h3>
-                            </div>
+                            <a ui-sref="post_detail({slug: entry.slug})">
+                                <div class="simple-header">
+                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : initConfig.img_default }}"></div>
+                                </div>
+                                <div class="simple-container">
+                                    <h3>{{ entry.title }}</h3>
+                                    <p>{{ entry.excerpt| characters:50 }}</p>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-sm-12" ng-show="Product.busy">
                         <h3 class="text-center">Cargando <i class="fa fa-spinner fa-spin"></i></h3>
                     </div>
-
                     <div class="col-sm-12" ng-show="!Product.busy">
-                        <h2 class="text-center no-content"
-                            ng-show="!Product.list.length">{{ 'no-contenido'|translate }}</h2>
+                        <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
+                            contenido disponible</h2>
                     </div>
                 </div>
             </div>
