--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,4 @@
-<div class="carousel slide" id="carousel-home">
+<!--<div class="carousel slide" id="carousel-home">
     <uib-carousel interval="6000" template-url="/templates/partials/carousel.html">
         <uib-slide ng-repeat="slide in Home.mainSlider">
             <a post-link="{ link: {url: slide.link, target: '_self'} }">
@@ -6,6 +6,23 @@
             </a>
         </uib-slide>
     </uib-carousel>
+</div>-->
+
+<!-- slider -->
+<div id="slider-area">
+    <div class="text-on-video">
+        <div class="text container">
+            <h1>Encuentra la estación más cercana a ti</h1>
+
+            <h3>Por cada carga de gasolina / Diesel acumula puntos y llevate un premio al final del mes!</h3>
+            <a href="#" class="btn btn-red"><i class="fa fa-envelope"> Contactanos</i></a>
+        </div>
+    </div>
+    <video autoplay width="100%" loop>
+        <source src="img/webdesign.mp4" type="video/mp4">
+        <source src="img/webdesign.ogv" type="video/ogg">
+        Your browser does not support HTML5 video.
+    </video>
 </div>
 
 <section id="products">
