ajuste de video

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
             <h1>Encuentra la estación más cercana a ti</h1>
 
             <h3>Por cada carga de gasolina / Diesel acumula puntos y llevate un premio al final del mes!</h3>
-            <a href="#" class="btn btn-red"><i class="fa fa-envelope"> Contactanos</i></a>
+            <a href="http://localhost:8080/#/contact" class="btn btn-red"><i class="fa fa-envelope"> Contactanos</i></a>
         </div>
     </div>
     <video autoplay width="100%" loop>
