--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -300,12 +300,6 @@ body
     font-size 20px
     text-shadow none
 
-#slider-area
-  background url(../img/bg.jpg)
-  padding-top 35px
-  padding-bottom: 285px
-  background-position: center center
-
   .scrollme
     color #555555
     font-size 28px
@@ -1105,6 +1099,26 @@ body
       color #555
       font-size 18px
       line-height 40px
+
+#slider-area
+  height auto
+  position relative
+  .text-on-video
+    background rgba(0,0,0,0.7)
+    position absolute
+    width 100%
+    height 100%
+    z-index 1
+    .text
+      margin-top 24%
+      text-align center
+      a
+        margin-right 15px
+      h1
+        color white
+      h3
+        color white
+        font-weight 300
 
 .phone
   color #666666
