--- a/app/css/main.css
+++ b/app/css/main.css
@@ -354,13 +354,7 @@ body {
   font-size: 20px;
   text-shadow: none;
 }
-#slider-area {
-  background: url("../img/bg.jpg");
-  padding-top: 35px;
-  padding-bottom: 285px;
-  background-position: center center;
-}
-#slider-area .scrollme {
+.carousel-caption .scrollme {
   color: #555;
   font-size: 28px;
 }
@@ -1295,6 +1289,31 @@ color
   color: #555;
   font-size: 18px;
   line-height: 40px;
+}
+#slider-area {
+  height: auto;
+  position: relative;
+}
+#slider-area .text-on-video {
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+#slider-area .text-on-video .text {
+  margin-top: 24%;
+  text-align: center;
+}
+#slider-area .text-on-video .text a {
+  margin-right: 15px;
+}
+#slider-area .text-on-video .text h1 {
+  color: #fff;
+}
+#slider-area .text-on-video .text h3 {
+  color: #fff;
+  font-weight: 300;
 }
 .phone {
   color: #666;
