ajuste de video

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1101,24 +1101,31 @@ body
       line-height 40px
 
 #slider-area
+  background-color #444
   height auto
   position relative
   .text-on-video
-    background rgba(0,0,0,0.7)
+    background rgba(156, 22, 29, 0.45)
     position absolute
     width 100%
     height 100%
     z-index 1
     .text
-      margin-top 24%
+      margin-top 18%
       text-align center
+      .btn
+        border 3px solid white
+        font-size 18px
+        font-weight bold
       a
         margin-right 15px
       h1
         color white
+        text-shadow 0 0 10px rgba(0,0,0,0.5)
       h3
         color white
         font-weight 300
+        text-shadow 0 0 10px rgba(0,0,0,0.5)
 
 .phone
   color #666666
