--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1291,29 +1291,37 @@ color
   line-height: 40px;
 }
 #slider-area {
+  background-color: #444;
   height: auto;
   position: relative;
 }
 #slider-area .text-on-video {
-  background: rgba(0,0,0,0.7);
+  background: rgba(156,22,29,0.45);
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 1;
 }
 #slider-area .text-on-video .text {
-  margin-top: 24%;
+  margin-top: 18%;
   text-align: center;
+}
+#slider-area .text-on-video .text .btn {
+  border: 3px solid #fff;
+  font-size: 18px;
+  font-weight: bold;
 }
 #slider-area .text-on-video .text a {
   margin-right: 15px;
 }
 #slider-area .text-on-video .text h1 {
   color: #fff;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 #slider-area .text-on-video .text h3 {
   color: #fff;
   font-weight: 300;
+  text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .phone {
   color: #666;
