--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,15 +12,15 @@
 <div id="slider-area">
     <div class="text-on-video">
         <div class="text container">
-            <h1>Encuentra la estación más cercana a ti</h1>
+            <h1>Carga y Gana!</h1>
 
             <h3>Por cada carga de gasolina / Diesel acumula puntos y llevate un premio al final del mes!</h3>
-            <a href="http://localhost:8080/#/contact" class="btn btn-red"><i class="fa fa-envelope"> Contactanos</i></a>
+            <a href="http://localhost:8080/#/contact" class="btn btn-white-clear"><i class="fa fa-envelope"> Contactanos</i></a>
         </div>
     </div>
     <video autoplay width="100%" loop>
-        <source src="img/webdesign.mp4" type="video/mp4">
-        <source src="img/webdesign.ogv" type="video/ogg">
+        <source src="video/servicio-prados-verdes.mp4" type="video/mp4">
+        <source src="video/servicio-prados-verdes.ogv" type="video/ogg">
         Your browser does not support HTML5 video.
     </video>
 </div>
