text slider dynamic

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -457,6 +457,18 @@
 /* Wide Mobile Layout: 480px. */
 
 @media only screen and (min-width: 480px) and (max-width: 767px)
+  #slider-area
+    height 300px !important
+  .single_feature i
+    left 46%
+    top -22%
+
+  .single_blog img
+    width 100%
+
+@media only screen and (min-width: 360px) and (max-width: 640px)
+  #slider-area
+    height 300px !important
   .single_feature i
     left 46%
     top -22%
