--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -10,8 +10,7 @@
             {{ initConfig.email }}</a>
         </h3>
         <h3>
-            <a href="#"><i class="ion-social-facebook"></i></a>
-            <a href="#"><i class="ion-social-twitter"></i> </a>
+            <a href="https://www.facebook.com/prados6386" target="_blank"><i class="ion-social-facebook"></i></a>
         </h3>
 
         <br/>
