--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2208,6 +2208,21 @@ color
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+  #slider-area {
+    height: 300px !important;
+  }
+  .single_feature i {
+    left: 46%;
+    top: -22%;
+  }
+  .single_blog img {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 360px) and (max-width: 640px) {
+  #slider-area {
+    height: 300px !important;
+  }
   .single_feature i {
     left: 46%;
     top: -22%;
