--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,21 +1,12 @@
-<!--<div class="carousel slide" id="carousel-home">
-    <uib-carousel interval="6000" template-url="/templates/partials/carousel.html">
-        <uib-slide ng-repeat="slide in Home.mainSlider">
-            <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                <div class="slider-img" style="background-image:url('{{ slide.urlImages.original }}');"></div>
-            </a>
-        </uib-slide>
-    </uib-carousel>
-</div>-->
-
 <!-- slider -->
 <div id="slider-area">
     <div class="text-on-video">
         <div class="text container">
-            <h1>Carga y Gana!</h1>
-
-            <h3>Por cada carga de gasolina / Diesel acumula puntos y llevate un premio al final del mes!</h3>
-            <a href="http://localhost:8080/#/contact" class="btn btn-white-clear"><i class="fa fa-envelope"> Contactanos</i></a>
+            <uib-carousel interval="6000" template-url="/templates/partials/carousel.html">
+                <uib-slide ng-repeat="slide in Home.mainSlider">
+                    <div ng-bind-html="slide.content"></div>
+                </uib-slide>
+            </uib-carousel>
         </div>
     </div>
     <video autoplay width="100%" loop>
@@ -29,7 +20,7 @@
     <div class="container-fluid no-padding">
         <div class="col-sm-3 no-padding">
             <div class="box-default icons">
-                <a href="#">
+                <a href="http://localhost:8080/#/products">
                     <img width="100px" src="img/icons/oil.png" alt="Productos"/>
 
                     <h3>Productos</h3>
@@ -73,7 +64,8 @@
             <h1 class="title-section">{{ Home.about.title}}</h1>
             <article ng-bind-html="Home.about.content"></article>
             <p class="pull-right"><a post-link="{ link: {url: Home.about.link, target: '_blank'} }"
-                               ui-sref="post_detail({slug: Home.about.slug})" title="{{ Home.about.title }}">Leer más...</a></p>
+                                     ui-sref="post_detail({slug: Home.about.slug})" title="{{ Home.about.title }}">Leer
+                más...</a></p>
         </div>
         <div class="co-md-4 col-sm-4">
             <div class="box-gas">
@@ -98,9 +90,9 @@
             </a>
         </div>
         <div class="col-md-3 section-cont">
-             <a href="mailto:info@serviciosahuayo.com">
+            <a href="mailto:info@serviciosahuayo.com">
                 <i class="ion-ios-email-outline"></i> <br/>
-                 <span>info@serviciosahuayo.com</span>
+                <span>info@serviciosahuayo.com</span>
             </a>
         </div>
         <div class="col-md-3 section-cont">
