--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -264,7 +264,11 @@ body
 .carousel-control.right, .carousel-control.left
   background-image none
 .carousel-inner
-  background-color rgba(238, 231, 222, 0.07)
+  background-color transparent
+.carousel-control
+  display none
+.carousel-indicators
+  display none
 .carousel-caption
   top 25%
   opacity 0.9
@@ -1119,13 +1123,17 @@ body
         font-weight bold
       a
         margin-right 15px
-      h1
+        font-size 42px
         color white
+      h1
         text-shadow 0 0 10px rgba(0,0,0,0.5)
+        font-size 42px
+        color white
       h3
         color white
         font-weight 300
         text-shadow 0 0 10px rgba(0,0,0,0.5)
+        font-size 30px
 
 .phone
   color #666666
